# DQN_V2

./: CMakeLists.txt
include/: CMakeLists.txt  agent.hpp  caffe_deep_network.hpp  ees_engine.hpp
lib/: CMakeLists.txt  agent.cpp  caffe_deep_network.cpp  ees_engine.cpp
mfiles/: analyzedata.m  data4_band.mat  data4band.mat  data5band.txt  data_4band.txt
project/: CMakeLists.txt  freq_learning.cpp
prototxt/: .~lock.Word.docx#  Word.docx  band.prototxt  band_solver.prototxt  channel.prototxt  channel_solver.prototxt  fl_1000x200.prototxt  fl_1000x200_solver.prototxt  fl_200x200.prototxt  fl_200x200_solver.prototxt
